libs/preprocessor/tests/errors/pe15_if_invalid_operator/stderr.ansi
[31m[PE15] Error:[0m invalid #if operator
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m/source.hpp:2:7[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249m#[0m[38;5;249mi[0m[38;5;249mf[0m[38;5;249m [0m[38;5;249mA[0m[38;5;249m [0m[38;5;201m=[0m[38;5;201m=[0m[38;5;201m=[0m[38;5;249m [0m[38;5;249m1[0m
 [38;5;240m  │[0m       [38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m  
 [38;5;240m  │[0m        [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m invalid operator
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: valid operators are ==, !=, <, >, <=, >=
[38;5;246m───╯[0m
